# matthewtolman.com

./: .clang-format  .clang-tidy2  .gitignore  CMakeLists.txt  README.md  index.html  main.js  package-lock.json  package.json  prep-imgs.sh  setup-version.js
data/: common-mixins.scss  common-vars.scss  common.scss
data/matthew-tolman/: article-templ.mustache  config.xml  list-templ.mustache  robots.txt  settings-templ.mustache  site.webmanifest
data/matthew-tolman/articles/: 2024-04-a-return-to-clojure.md  2024-06-28-foray-into-erlang.md  2024-10-tigerbeetle-and-nasa-reliability.md  2024-11-fast-csv-parsing-in-zig.md  2024-12-why-i-stopped-using-go.md  a-site-for-my-experiments.md  chains-buckets-and-iteration-2022-09-20.md  cpp-to-javascript-with-cheerp.md  creating-a-wasm-library-with-embind.md  error-handling-across-programming-languages.md  introduction-to-localization-and-language.md  journey-across-ides-02-2024.md  overview-of-globally-unique-identifiers.md  predictions-in-2022-2022-11-10.md  separate-sql-from-code-with-files-initial-thoughts.md  stateless-logic.md  unsigned-integers-in-javascript.md  web-accessibility-basics-2022.md  what-is-property-testing.md  writing-property-test-library.md
data/matthew-tolman/fonts/: OpenDyslexic-Bold-Italic.eot  OpenDyslexic-Bold.eot  OpenDyslexic-Italic.eot  OpenDyslexic-Regular.eot  OpenDyslexicMono-Regular.eot
data/matthew-tolman/script/: mathjax-fallback.js
data/matthew-tolman/stylesheets/: main.scss
generator/: main.cpp
generator/src/: cli_args.cpp  cli_args.hpp  eval_engine.cpp  eval_engine.hpp  files.cpp  files.h  parse.cpp  parse.hpp  pipeline.cpp  pipeline.hpp  str_utils.cpp  str_utils.h  str_utils.hpp
generator/test/: cli_args.cpp  eval_engine.cpp  files.cpp  parse.cpp  str_utils.cpp
generator/test/sample_blog_files/: blog.mml  sample_data.csv
src/: generator.js  generator.ts  parser.js  parser.ts  types.js  types.ts
src/hljs_langs/: odin.js  zig.js
(+6 files in other folders)
